# alone-in-the-dark-internal-trainer

./: .gitignore  README.md  alone-in-the-dark-internal-trainer.sln  alone-in-the-dark-internal-trainer.vcxproj  alone-in-the-dark-internal-trainer.vcxproj.filters
.github/workflows/: cpp-dll-release.yml
cpp/: alone-in-the-dark-internal-trainer.vcxproj  alone-in-the-dark-internal-trainer.vcxproj.filters
cpp/src/: trainer.cpp  trainer.h
rust/: Cargo.toml
rust/src/: lib.rs
src/: d3d11hook.cpp  d3d11hook.h  gdk.cpp  gdk.h
