[package]
name = "alone-in-the-dark-internal-trainer"
edition = "2021"
publish = false

[dependencies]
libmem = { version = "5.0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
